--- a/data/fixtures/fixtures.yml
+++ b/data/fixtures/fixtures.yml
@@ -1,17 +1,65 @@
 # # Populate this file with data to be loaded by your ORM's *:data-load task.
 # # You can create multiple files in this directory (i.e. 010_users.yml,
 # # 020_articles.yml, etc) which will be loaded in alphabetical order.
-# # 
+# #
 # # See documentation for your ORM's *:data-load task for more information.
-# 
-# User:
-#   fabien:
-#     username: fabien
-#     password: changeme
-#     name:     Fabien Potencier
-#     email:    fabien.potencier@symfony-project.com
-#   kris:
-#     username: Kris.Wallsmith
-#     password: changeme
-#     name:     Kris Wallsmith
-#     email:    kris.wallsmith@symfony-project.com
+#
+#
+Package:
+  bulk:
+    name: Bulk
+  bag:
+    name: Bag
+  container:
+    name: Container
+  pallet:
+    name: Pallet
+  cooling:
+    name: Cooling
+  other:
+    name: Other
+
+Province:
+  lusaka:
+    name: Lusaka
+
+District:
+  lusaka-city:
+    name : lusaka-city
+    province: lusaka
+
+User:
+  hans:
+    name: hansrip
+    login: hrip
+    password: mYsECRET
+    mobile_number: 0978289631
+  eric:
+    name: ericsummeling
+    login: esummeling
+    password: mYsECRET
+
+Customer:
+  customerhans
+   user: hans
+
+Transporter:
+  transportereric
+    user: eric
+    number_of_trucks: 10
+
+TransportLoad:
+  firstload:
+    customer: customerhans
+    transporter: transportereric
+    posted_at: '2010-04-29'
+    from_district: lusaka
+    to_district: lusaka
+    load_description: 'Butter, Cheese and Eggs'
+    package: other
+    cooling: 0
+    weight: 50
+    arrive_before: '2010-05-10'
+    arrive_after: '2010-05-15'
+    bid: 'Open'
+    comment : ' Here comes the first load from Hans to Eric, please be carefull with the eggs!'
